<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="350dp">

    <ImageView
        android:id="@+id/imageView_dialogPic2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dialogImage"
        android:minHeight="230dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textViewDialog2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/textViewDialog"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/imageView_dialogPic2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textViewDialog2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_dialogTwitter2"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="40dp"
            android:contentDescription="@string/dialogTwitter"
            app:layout_constraintWidth_percent="0.5"
            app:srcCompat="@drawable/bluetwitter" />

        <ImageView
            android:id="@+id/imageView_dialogBookmark2"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="40dp"
            android:contentDescription="@string/dialogBookmark"
            app:srcCompat="@drawable/ic_bookmark_black_nonclicked_24dp" />

    </LinearLayout>

</RelativeLayout>